--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,14 +18,21 @@ jobs:
           - windows-latest
         raku-version:
           - 'latest'
-        libpq-dev:
-          - 'latest'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
+      - name : Install Dependencies (linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get install -y libpq-dev
+      - name : Install Dependencies (macOS)
+        if: matrix.os == 'macOS-latest'
+        run: brew install libpq
+      - name : Install Dependencies (windows)
+        if: matrix.os == 'windows-latest'
+        run: choco install libpq-dev
       - name: Install Dependencies
         run: zef install --/test --test-depends --deps-only .
       - name: Install App::Prove6
