--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,15 +24,15 @@ jobs:
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
-      - name : Install Dependencies (linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get install -y libpq-dev
-      - name : Install Dependencies (macOS)
-        if: matrix.os == 'macOS-latest'
-        run: brew install libpq
-      - name : Install Dependencies (windows)
-        if: matrix.os == 'windows-latest'
-        run: choco install postgresql
+      # - name : Install Dependencies (linux)
+      #   if: matrix.os == 'ubuntu-latest'
+      #   run: sudo apt-get install -y libpq-dev
+      # - name : Install Dependencies (macOS)
+      #   if: matrix.os == 'macOS-latest'
+      #   run: brew install libpq
+      # - name : Install Dependencies (windows)
+      #   if: matrix.os == 'windows-latest'
+      #   run: choco install postgresql
       - name: Install Dependencies (Download DB::Pg)
         # Download DB::Pg, unpack it, edit META6.json to remove 'ver<5>' from
         # the 'depends' section, and call zef to install it.
