--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies (Download DB::Pg)
         # Download DB::Pg, unpack it, edit META6.json to remove 'ver<5>' from
-        # the 'depends' section, and call zef to install it.
+        # the 'depends' section, and call zef to install it. fixed sed.
         run: |
           git clone https://github.com/CurtTilmes/raku-dbpg.git
           cd raku-dbpg;
