--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,9 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies libpq-dev
         if: matrix.os == 'macOS-latest'
-        run: brew install libpq
+        run: |
+          brew install libpq;
+          brew install libuuid;
       - name: Install Dependencies (Download DB::Pg)
         # Download DB::Pg, unpack it, edit META6.json to remove 'ver<5>' from
         # the 'depends' section, and call zef to install it. fixed sed.
