--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os:
-          #- ubuntu-latest
+          - ubuntu-latest
           - macOS-latest
           #- windows-latest
         raku-version:
@@ -24,7 +24,12 @@ jobs:
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
-      - name: Install Dependencies libpq-dev
+      - name: Install Dependencies libpq-dev (Ubuntu only)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get install libpq-dev
+          sudo apt-get install libossp-uuid-dev
+      - name: Install Dependencies libpq-dev (macOS only)
         if: matrix.os == 'macOS-latest'
         run: |
           brew install libpq;
