--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,12 @@ jobs:
         run: |
           brew install libpq;
           brew install ossp-uuid;
+      - name: Install Dependencies (windows only)
+        if: matrix.os == 'windows-latest'
+        run: |
+          choco install postgresql
+          choco install ossp-uuid
+          choco install sed
       - name: Install Dependencies (Download DB::Pg)
         # Download DB::Pg, unpack it, edit META6.json to remove 'ver<5>' from
         # the 'depends' section, and call zef to install it. fixed sed.
