--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           brew install libpq;
           brew install ossp-uuid;
-          cd /use/lib;
+          cd /usr/local/lib;
           ln -s /opt/homebrew/lib/libuuid.dylib;
           ln -s /opt/homebrew/lib/libpq.dylib;
       - name: Install Dependencies (windows only)
